change 3 way card size

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -222,9 +222,9 @@
           <div class="scroll-wrapper mx-3">
             <drag-scroll #nav [scroll-x-wheel-enabled]="true">
               <div class="container-fluid mb-5">
-                <div drag-scroll-item class="me-5 ms-3" [style.width]="'21rem'">
+                <div drag-scroll-item class="me-5 ms-3" [style.width]="'290px'" [style.height]="'385px'">
                   <div class="card h-100 bg-dark text-white rounded-4 shadow">
-                    <img src="/assets/img/project/card-background.png" class="card-img rounded-4" alt="...">
+                    <img src="/assets/img/project/card-background.png" class="card-img rounded-4 h-100" alt="...">
                     <div class="card-img-overlay d-flex flex-column p-0 m-0">
                       <h4 class="card-title fs-3 fw-900 py-4">Spin The <br> Wheel</h4>
                       <div
@@ -237,9 +237,9 @@
                     </div>
                   </div>
                 </div>
-                <div drag-scroll-item class="me-5 ms-3" [style.width]="'21rem'">
+                <div drag-scroll-item class="me-5 ms-3" [style.width]="'290px'" [style.height]="'385px'">
                   <div class="card h-100 bg-dark text-white rounded-4 shadow">
-                    <img src="/assets/img/project/card-background.png" class="card-img rounded-4" alt="...">
+                    <img src="/assets/img/project/card-background.png" class="card-img rounded-4 h-100" alt="...">
                     <div class="card-img-overlay d-flex flex-column p-0 m-0">
                       <h4 class="card-title fs-3 fw-900 py-4">Scratch <br>& Snatch</h4>
                       <div
@@ -252,9 +252,9 @@
                     </div>
                   </div>
                 </div>
-                <div drag-scroll-item class="me-5 ms-3" [style.width]="'21rem'">
+                <div drag-scroll-item class="me-5 ms-3" [style.width]="'290px'" [style.height]="'385px'">
                   <div class="card h-100 bg-dark text-white rounded-4 shadow">
-                    <img src="/assets/img/project/card-background.png" class="card-img rounded-4" alt="...">
+                    <img src="/assets/img/project/card-background.png" class="card-img rounded-4 h-100" alt="...">
                     <div class="card-img-overlay d-flex flex-column p-0 m-0">
                       <h4 class="card-title fs-3 fw-900 py-4">Play A <br> Card</h4>
                       <div
