--- a/src/app/pages/game/snatch/snatch.component.scss
+++ b/src/app/pages/game/snatch/snatch.component.scss
@@ -1,6 +1,7 @@
 .snatch-container {
     background-color: white;
-    height: calc(100vh - 168px);
+    min-height: 85vh;
+    position: relative;
 }
 .scratch-card-bottom{
     margin-top:20px;
@@ -10,9 +11,12 @@
 }
 .sc__wrapper {
     background-repeat: no-repeat!important;
-    background-size: 95% 90%!important;
+    background-size: 90% 90%!important;
     background-position: center!important;
-    width: 100%;
+}
+
+.scratch-button-content {
+    width: 35vw;
 }
 
 // snatch reward itme
@@ -36,8 +40,17 @@
 .coin-image-wrapper {
     position: absolute;
     right: 1rem;
-    bottom: 8rem;
+    bottom: 1rem;
     img {
         width: 10rem;
+    }
+}
+
+@media (max-width: 400px) {
+    .scratch-button-content {
+        width: 50vw;
+    }
+    .coin-image-wrapper img {
+        width: 6rem;
     }
 }
