--- a/src/app/shared/components/image-button/image-button.component.scss
+++ b/src/app/shared/components/image-button/image-button.component.scss
@@ -54,3 +54,24 @@
         font-size: var(--font-size);
     }
 }
+
+@media (max-width: 400px) {
+    .img-button-text {
+        --font-size: 16px;
+    }
+    .image-button {
+        --height: 2.7rem;
+        height: 2.7rem!important;
+    }
+    .left-button-wrapper {
+        --height: 2.7rem;
+        --width: 2rem;
+    }
+    .repeat-button-wrapper {
+        --height: 2.7rem;
+    }
+    .right-button-wrapper {
+        --height: 2.7rem; 
+        --width: 2rem;     
+    }   
+}
