--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -119,13 +119,16 @@ body {
 
 
 // scratch card 
+.sc__wrapper {
+    width   : 50vw;
+    height  : 25vw;
+}
 #js--sc--container {
     // max-width: 300px;
-    width    : 100%;
-    // height: 300px;
-    margin   : auto;
-    position : relative;
-
+    width   : 50vw;
+    height  : 25vw;
+    margin  : auto;
+    position: relative;
     img {
         width     : 90%;
         height    : 90%;
@@ -170,80 +173,148 @@ body {
         // border: 1px solid #26005f;
     }
 }
-@media screen and (min-width: 1500px) {
-    #js--sc--container {
-        width: 720px!important;
-        height: 400px;
-    }
-    .sc__wrapper {
-        width: 720px!important;
-        height: 400px;
-    } 
-}
-@media (min-width:1200px) and (max-width: 1499px) {
-    #js--sc--container {
-        width: 600px!important;
-        height: 350px;
-    }  
-    .sc__wrapper {
-        width: 600px!important;
-        height: 350px;
-    } 
-}
-@media (min-width: 992px) and (max-width: 1199px) {
-    #js--sc--container {
-        width: 550px!important;
-        height: 300px;
-    } 
-    .sc__wrapper {
-        width: 550px!important;
-        height: 300px;
-    }  
-}
-@media (min-width: 768px) and (max-width: 991px) {
-    #js--sc--container {
-        width: 500px!important;
-        height: 280px;
-    }  
-    .sc__wrapper {
-        width: 500px!important;
-        height: 280px;
-    } 
-}
 
-@media (min-width: 576px) and (max-width: 767px) {
+@media (max-width: 400px) {
     #js--sc--container {
-        width: 300px!important;
-        height: 250px;
-    }   
-    .sc__wrapper {
-        width: 300px!important;
-        height: 250px;
-    } 
-}
-
-@media (min-width: 400px) and (max-width: 575px) {
-    #js--sc--container {
-        width: 300px!important;
-        height: 250px;
-    } 
-    .sc__wrapper {
-        width: 300px!important;
-        height: 250px;
-    } 
-}
-@media (max-width: 399px) {
-    #js--sc--container {
-        width: 300px!important;
-        height: 250px;
+        width   : 70vw;
+        height  : 40vw;
     }
+
     .sc__wrapper {
-        width: 300px!important;
-        height: 250px;
-    }  
+        width   : 70vw;
+        height  : 40vw;
+    }
 }
+// @media screen and (min-width: 1500px) {
+//     #js--sc--container {
+//         width : 720px !important;
+//         height: 400px;
+//     }
+
+//     .sc__wrapper {
+//         width : 720px !important;
+//         height: 400px;
+//     }
+// }
+
+// @media (min-width:1200px) and (max-width: 1499px) {
+//     #js--sc--container {
+//         width : 600px !important;
+//         height: 350px;
+//     }
+
+//     .sc__wrapper {
+//         width : 600px !important;
+//         height: 350px;
+//     }
+// }
+
+// @media (min-width: 992px) and (max-width: 1199px) {
+//     #js--sc--container {
+//         width : 550px !important;
+//         height: 300px;
+//     }
+
+//     .sc__wrapper {
+//         width : 550px !important;
+//         height: 300px;
+//     }
+// }
+
+// @media (min-width: 768px) and (max-width: 991px) {
+//     #js--sc--container {
+//         width : 500px !important;
+//         height: 280px;
+//     }
+
+//     .sc__wrapper {
+//         width : 500px !important;
+//         height: 280px;
+//     }
+// }
+
+// @media (min-width: 576px) and (max-width: 767px) {
+//     #js--sc--container {
+//         width : 300px !important;
+//         height: 250px;
+//     }
+
+//     .sc__wrapper {
+//         width : 300px !important;
+//         height: 250px;
+//     }
+// }
+
+// @media (min-width: 400px) and (max-width: 575px) {
+//     #js--sc--container {
+//         width : 300px !important;
+//         height: 250px;
+//     }
+
+//     .sc__wrapper {
+//         width : 300px !important;
+//         height: 250px;
+//     }
+// }
+
+// @media (max-width: 399px) {
+//     #js--sc--container {
+//         width : 300px !important;
+//         height: 250px;
+//     }
+
+//     .sc__wrapper {
+//         width : 300px !important;
+//         height: 250px;
+//     }
+// }
+
 @font-face {
     font-family: app_font;
     src        : url('../fonts/Gotham-Font/Gotham-Black.otf');
 }
 
+// modal part
+.game-reward-modal {
+    justify-content: center;
+}
+
+.game-reward-modal .modal-content {
+    font-family     : app_font !important;
+    border-radius   : 10% !important;
+    width           : 457px;
+    height          : 530px;
+    background-color: black;
+
+
+    .reward-image-wrapper {
+        width           : 280px;
+        height          : 380px;
+        background-color: #ff9f00;
+        position        : relative;
+
+        .reward-image {
+            width : 200px;
+            height: 200px;
+        }
+    }
+}
+
+@media (max-width: 456px) {
+    .game-reward-modal .modal-content {
+        width : 320px;
+        height: 400px;
+
+        .reward-image-wrapper {
+            width           : 200px;
+            height          : 280px;
+            background-color: #ff9f00;
+
+            .reward-image {
+                width : 130px;
+                height: 130px;
+            }
+        }
+    }
+
+}
