--- a/src/app/pages/game/spin/spin.component.html
+++ b/src/app/pages/game/spin/spin.component.html
@@ -7,7 +7,7 @@
         [size]="'lg'"
       ></image-button>
     </div>
-    <div class="mt-3">You will be charged 100$</div>
+    <div class="mt-3 fw-900">You will be charged 100$</div>
     <div class="spin-wrapper mt-5">
       <div class="spin-mark">
         <img src="/assets/img/project/game/spin/mark.png" width="80" />
