--- a/src/app/pages/game/spin/spin.component.html
+++ b/src/app/pages/game/spin/spin.component.html
@@ -1,31 +1,146 @@
 <app-page-layout [headerTheme]="'light'">
-  <div class="bg-light text-dark pt-5 text-center">
-    <div class="start-spin-button mx-auto">
+  <div class="bg-light text-dark pt-5 text-center" (window:resize)="setElementPosition()">
+    <div class="scroll-wrapper pt-3 pb-5">
+      <drag-scroll #nav [scroll-x-wheel-enabled]="true">
+        <div class="container-fluid px-5">
+          <div drag-scroll-item class="mx-2">
+            <div
+              class="snatch-reward-item rounded-5 d-flex flex-column justify-content-center align-items-center"
+            >
+              <p class="text-white">Lifetime Coffee</p>
+              <p class="text-white">1 in 5000</p>
+            </div>
+          </div>
+          <div drag-scroll-item class="mx-2">
+            <div
+              class="snatch-reward-item rounded-5 d-flex flex-column justify-content-center align-items-center"
+            >
+              <p class="text-white">Coffee Every Monday</p>
+              <p class="text-white">1 in 1000</p>
+            </div>
+          </div>
+          <div drag-scroll-item class="mx-2">
+            <div
+              class="snatch-reward-item rounded-5 d-flex flex-column justify-content-center align-items-center"
+            >
+              <p class="text-white">Coffee Every Monday</p>
+              <p class="text-white">1 in 1000</p>
+            </div>
+          </div>
+          <div drag-scroll-item class="mx-2">
+            <div
+              class="snatch-reward-item rounded-5 d-flex flex-column justify-content-center align-items-center"
+            >
+              <p class="text-white">Coffee Every Monday</p>
+              <p class="text-white">1 in 1000</p>
+            </div>
+          </div>
+          <div drag-scroll-item class="mx-2">
+            <div
+              class="snatch-reward-item rounded-5 d-flex flex-column justify-content-center align-items-center"
+            >
+              <p class="text-white">Coffee Every Monday</p>
+              <p class="text-white">1 in 1000</p>
+            </div>
+          </div>
+          <div drag-scroll-item class="mx-2">
+            <div
+              class="snatch-reward-item rounded-5 d-flex flex-column justify-content-center align-items-center"
+            >
+              <p class="text-white">Coffee Every Monday</p>
+              <p class="text-white">1 in 1000</p>
+            </div>
+          </div>
+          <div drag-scroll-item class="mx-2">
+            <div
+              class="snatch-reward-item rounded-5 d-flex flex-column justify-content-center align-items-center"
+            >
+              <p class="text-white">Coffee Every Monday</p>
+              <p class="text-white">1 in 1000</p>
+            </div>
+          </div>
+          <div drag-scroll-item class="mx-2">
+            <div
+              class="snatch-reward-item rounded-5 d-flex flex-column justify-content-center align-items-center"
+            >
+              <p class="text-white">Coffee Every Monday</p>
+              <p class="text-white">1 in 1000</p>
+            </div>
+          </div>
+          <div drag-scroll-item class="mx-2">
+            <div
+              class="snatch-reward-item rounded-5 d-flex flex-column justify-content-center align-items-center"
+            >
+              <p class="text-white">Coffee Every Monday</p>
+              <p class="text-white">1 in 1000</p>
+            </div>
+          </div>
+          <div drag-scroll-item class="mx-2">
+            <div
+              class="snatch-reward-item rounded-5 d-flex flex-column justify-content-center align-items-center"
+            >
+              <p class="text-white">Coffee Every Monday</p>
+              <p class="text-white">1 in 1000</p>
+            </div>
+          </div>
+          <div drag-scroll-item class="mx-2">
+            <div
+              class="snatch-reward-item rounded-5 d-flex flex-column justify-content-center align-items-center"
+            >
+              <p class="text-white">Coffee Every Monday</p>
+              <p class="text-white">1 in 1000</p>
+            </div>
+          </div>
+          <div drag-scroll-item class="mx-2">
+            <div
+              class="snatch-reward-item rounded-5 d-flex flex-column justify-content-center align-items-center"
+            >
+              <p class="text-white">Coffee Every Monday</p>
+              <p class="text-white">1 in 1000</p>
+            </div>
+          </div>
+          <div drag-scroll-item class="mx-2">
+            <div
+              class="snatch-reward-item rounded-5 d-flex flex-column justify-content-center align-items-center"
+            >
+              <p class="text-white">Lifetime Coffee</p>
+              <p class="text-white">1 in 5000</p>
+            </div>
+          </div>
+        </div>
+      </drag-scroll>
+    </div>
+    <div class="start-spin-button mx-auto row">
       <image-button
         [text]="'Spin the wheel'"
         (click)="calculatePrize()"
         [size]="'lg'"
+        class="col-8 col-sm-7 col-md-6 col-lg-5 mx-auto"
       ></image-button>
     </div>
     <div class="mt-3 fw-900">You will be charged 100$</div>
-    <div class="spin-wrapper mt-5">
+    <div class="spin-wrapper py-5">
       <div class="spin-mark">
-        <img src="/assets/img/project/game/spin/mark.png" width="80" />
+        <img src="/assets/img/project/game/spin/mark.png" />
       </div>
-      <canvas
-        (click)="getSegment($event)"
-        class="spin-panel"
-        id="canvas"
-        [width]="1240"
-        [height]="620"
-      >
-        <p>Sorry, your browser doesn't support canvas. Please try another.</p>
-      </canvas>
-      <div class="spin-result">
-        <img src=""/>
-      </div>
-      <div class="spin-center">
-        <img src="/assets/img/project/game/spin/spin-center.png"/>
+      <div class="spin-component">
+        <canvas
+          (click)="getSegment($event)"
+          class="spin-panel"
+          id="canvas"
+          [width]="1240"
+          [height]="1240"
+        >
+          <p>Sorry, your browser doesn't support canvas. Please try another.</p>
+        </canvas>
+        <div class="spin-center">
+          <img
+            src="/assets/img/project/game/spin/spin-center.png"
+          />
+        </div>
+        <div class="spin-result">
+          <img src="" />
+        </div>
       </div>
     </div>
   </div>
