--- a/src/app/shared/components/image-button/image-button.component.scss
+++ b/src/app/shared/components/image-button/image-button.component.scss
@@ -75,3 +75,13 @@
         --width: 2rem;     
     }   
 }
+@media (max-width : 767px) {
+    .img-button-text {
+        --font-size: 18px;
+    }
+}
+@media (min-width : 768px) and (max-width: 1200px) {
+    .img-button-text {
+        --font-size: 20px;
+    }
+}
