--- a/src/app/shared/components/modals/game-reward-modal/game-reward-modal.component.scss
+++ b/src/app/shared/components/modals/game-reward-modal/game-reward-modal.component.scss
@@ -4,6 +4,7 @@
     font-size: 18px;
     font-family: app_font;
     height: 70px;
+    word-break: break-word;
 }
 .reward-item-id {
     font-size: 22px;
