--- a/src/app/shared/components/layouts/layout-header/layout-header.component.html
+++ b/src/app/shared/components/layouts/layout-header/layout-header.component.html
@@ -14,7 +14,7 @@
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 
         <li class="nav-item pe-5">
-          <a class="nav-link fw-bold" [routerLink]="['/home']" [routerLinkActive]="['active']">{{ 'EXPLORER_REWARD' | translate | uppercase }}</a>
+          <a class="nav-link fw-bold" [routerLink]="['/market-place']" [routerLinkActive]="['active']">{{ 'EXPLORER_REWARD' | translate | uppercase }}</a>
         </li>
         <li class="nav-item">
           <a class="nav-link fw-bold" [routerLink]="['/home']" [routerLinkActive]="['active']">{{ 'BLIND_BID_ON_MEGA_REWARD' | translate | uppercase }}</a>
