modified reward page

--- a/src/app/shared/components/layouts/layout-header/layout-header.component.html
+++ b/src/app/shared/components/layouts/layout-header/layout-header.component.html
@@ -17,7 +17,7 @@
           <a class="nav-link fw-bold" [routerLink]="['/market-place']" [routerLinkActive]="['active']">{{ 'EXPLORER_REWARD' | translate | uppercase }}</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link fw-bold" [routerLink]="['/home']" [routerLinkActive]="['active']">{{ 'BLIND_BID_ON_MEGA_REWARD' | translate | uppercase }}</a>
+          <a class="nav-link fw-bold" [routerLink]="['/game/snatch']" [routerLinkActive]="['active']">{{ 'BLIND_BID_ON_MEGA_REWARD' | translate | uppercase }}</a>
         </li>
         <!-- <li class="nav-item dropdown" ngbDropdown>
           <a class="nav-link dropdown-toggle" ngbDropdownToggle id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
