--- a/src/app/shared/components/market-place/reward-card-item/reward-card-item.component.html
+++ b/src/app/shared/components/market-place/reward-card-item/reward-card-item.component.html
@@ -1,6 +1,6 @@
 <div class="reward-card-wrapper mx-auto rounded-4 pt-4 h-100">
     <img class="reward-image mx-auto" src="assets/img/project/game/snatch/1.png" />
-    <div class="reward-card-footer d-flex flex-row justify-content-between align-items-center py-5">
+    <div class="reward-card-footer d-flex flex-row justify-content-between align-items-center py-4">
         <div class="left-footer-item">
             <img src="assets/img/project/login.png" />
         </div>
@@ -8,14 +8,14 @@
             <p class="text-break fw-100 mb-0" [style.font-size]="'12px'">
                 Free IceCream for and Life
             </p>
-            <p class="text-break mb-0" [style.font-size]="'12px'">
+            <p class="text-break mb-0 fw-bold" [style.font-size]="'12px'">
                 Starbucks
             </p>
         </div>
-        <div class="right-footer-item text-center">
-            <div class="fw-800" [style.font-size]="'8px'">Draw Fee</div>
+        <div class="right-footer-item text-center py-2 cursor-pointer rounded-2 bg-white border-1 d-felx flex-column justify-content-center align-items-center">
+            <div  [style.font-size]="'10px'">Price:</div>
             <div class="d-grid">
-                <div class="btn btn-outline-warning btn-sm" [style.font-size]="'10px'">50$</div>
+                <div class="fw-bold" [style.font-size]="'12px'">50$</div>
             </div>
         </div>
     </div>
