update market place page

--- a/src/app/shared/components/market-place/collection-item/collection-item.component.html
+++ b/src/app/shared/components/market-place/collection-item/collection-item.component.html
@@ -1,9 +1,9 @@
-<div class="card collection-card border-0 h-100 rounded-4 pb-4">
-    <img src="assets/img/project/process_3.png" class="card-img-top rounded-4 mt-3 mx-auto" alt="collection image">
-    <div class="card-body text-center position-relative">
+<div class="card collection-card border-0 h-100 rounded-4">
+    <img src="assets/img/project/reward_drops/2.png" class="card-img-top rounded-4 mt-3 mx-auto" alt="collection image">
+    <div class="card-body text-center position-relative d-flex flex-column justify-content-center">
         <div class="collection-symbol">
             <img src="assets/img/project/process_3.png" />
         </div>
-        <h5 class="card-title mt-4">Collection</h5>
+        <h5 class="card-title py-4 mt-3 mb-0">Collection Name</h5>
     </div>
 </div>
