--- a/src/app/shared/components/market-place/reward-card-item/reward-card-item.component.html
+++ b/src/app/shared/components/market-place/reward-card-item/reward-card-item.component.html
@@ -1,4 +1,4 @@
-<div class="reward-card-wrapper mx-auto rounded-4 pt-4 h-100">
+<div class="reward-card-wrapper mx-auto rounded-4 pt-4 h-100" (click)="onClick()">
     <img class="reward-image mx-auto" src="assets/img/project/game/snatch/1.png" />
     <div class="reward-card-footer d-flex flex-row justify-content-between align-items-center py-4">
         <div class="left-footer-item">
