--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -322,3 +322,10 @@ body {
     }
 
 }
+
+// brand page accordion custom style
+.brand-accordion-wrapper {
+    .accordion-button:focus {
+        box-shadow: none !important;
+    }
+}
