--- a/src/app/shared/components/market-place/reward-card-item/reward-card-item.component.scss
+++ b/src/app/shared/components/market-place/reward-card-item/reward-card-item.component.scss
@@ -7,6 +7,7 @@
     justify-content: center;
     align-items    : center;
     background-color: #f5f5f5;;
+    cursor: pointer;
     --width: 80%;
 
     .reward-image {
