--- a/src/app/shared/components/pagination/pagination.component.html
+++ b/src/app/shared/components/pagination/pagination.component.html
@@ -1,19 +1,54 @@
-<nav aria-label="pagination" *ngIf="pagination.pages && pagination.pages.length">
-    <ul class="pagination d-flex justify-content-center pagination-sm">
-        <li *ngIf="pagination.browser" class="page-item" [ngClass]="{disabled:pagination.current === 1}">
-            <a class="page-link waves-effect waves-effect" (click)="selectPage(1)">&laquo;</a>
-        </li>
-        <li *ngIf="pagination.browser" class="page-item" [ngClass]="{disabled:pagination.current === 1}">
-            <a class="page-link" (click)="selectPage(pagination.current - 1)">&lsaquo;</a>
-        </li>
-        <li class="page-item" *ngFor="let page of pagination.pages" [ngClass]="{active:pagination.current === page}">
-            <a class="page-link" (click)="selectPage(page)">{{page}}</a>
-        </li>
-        <li *ngIf="pagination.browser" class="page-item" [ngClass]="{disabled:pagination.current === pagination.total}">
-            <a class="page-link" (click)="selectPage(pagination.current + 1)">&rsaquo;</a>
-        </li>
-        <li *ngIf="pagination.browser" class="page-item" [ngClass]="{disabled:pagination.current === pagination.total}">
-            <a class="page-link" (click)="selectPage(pagination.total)">&raquo;</a>
-        </li>
-    </ul>
-</nav>
+<div class="d-grid">
+    <div class="col-8 mx-auto d-flex justify-content-center align-items-center py-5">
+        <label class="solar-page-link shadow bg-body rounded-circle text-center me-3" [ngClass]="{disabled:pagination.current === 1}" (click)="selectPage(pagination.current - 1)">
+            &lsaquo;
+        </label>
+        <nav aria-label="pagination " *ngIf="pagination.pages && pagination.pages.length">
+            <ul class="pagination d-flex justify-content-center pagination-md mb-0 py-2 shadow rounded-pill px-5">
+                <!-- <li *ngIf="pagination.browser" class="page-item" [ngClass]="{disabled:pagination.current === 1}">
+                    <a class="page-link waves-effect waves-effect" (click)="selectPage(1)">&laquo;</a>
+                </li> -->
+                <!-- <li *ngIf="pagination.browser" class="page-item" [ngClass]="{disabled:pagination.current === 1}">
+                    <a class="page-link" (click)="selectPage(pagination.current - 1)">&lsaquo;</a>
+                </li> -->
+                <li class="page-item" *ngFor="let page of pagination.pages"
+                    [ngClass]="{active:pagination.current === page}">
+                    <a class="page-link" (click)="selectPage(page)">{{page}}</a>
+                </li>
+                <li *ngIf="pagination.hasMiddle && pagination.current > 10 && pagination.current < pagination.total - 2"
+                    class="page-item">
+                    <a class="page-link waves-effect waves-effect" (click)="selectPage(pagination.current - 1)">...</a>
+                </li>
+                <li *ngIf="pagination.hasMiddle && pagination.current > 10 && pagination.current <= pagination.total - 2"
+                    class="page-item active">
+                    <a class="page-link waves-effect waves-effect"
+                        (click)="selectPage(pagination.current)">{{pagination.current}}</a>
+                </li>
+                <li *ngIf="pagination.current == pagination.total - 2" class="page-item active">
+                    <a class="page-link waves-effect waves-effect"
+                        (click)="selectPage(pagination.current)">{{pagination.current}}</a>
+                </li>
+                <li *ngIf="pagination.hasMiddle" class="page-item">
+                    <a class="page-link waves-effect waves-effect"
+                        [ngClass]="{'pe-none' : pagination.current > pagination.total - 2}"
+                        (click)="selectPage(pagination.current + 1)">...</a>
+                </li>
+                <li *ngIf="pagination.browser" class="page-item"
+                    [ngClass]="{active:pagination.current === pagination.total - 1}">
+                    <a class="page-link" (click)="selectPage(pagination.total - 1)">{{pagination.total - 1}}</a>
+                </li>
+                <li *ngIf="pagination.browser" class="page-item"
+                    [ngClass]="{active:pagination.current === pagination.total}">
+                    <a class="page-link" (click)="selectPage(pagination.total)">{{pagination.total}}</a>
+                </li>
+                <!-- <li *ngIf="pagination.browser" class="page-item"
+                    [ngClass]="{disabled:pagination.current === pagination.total, active:pagination.current === pagination.total}">
+                    <a class="page-link" (click)="selectPage(pagination.total)">&raquo;</a>
+                </li> -->
+            </ul>
+        </nav>
+        <label class="solar-page-link shadow bg-body rounded-circle text-center ms-3" [ngClass]="{disabled:pagination.current === pagination.total}" (click)="selectPage(pagination.current + 1)">
+            &rsaquo;
+        </label>
+    </div>
+</div>
